compiler/tools/fpp-check/test/array_format_not_numeric.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/array_format_not_numeric.fpp: 1.29
array A = [3] string format "{.3f}"
                            ^
error: invalid format string: type array A does not have numeric members
